# TFTPRouterFlasher

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CREDITS.md  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-security.txt  requirements.txt  ruff.toml  sitemap.xml
.github/actions/build-and-publish/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: cd-dev.yml  cd-release.yml  ci.yml  docs.yml  lint.yml  main-workflow.yml  reusable-cd-dev.yml  reusable-ci.yml  reusable-docs.yml  reusable-security.yml  schedule-security.yml  security.yml
contributing/: index.html
docs/: .gitignore
search/: search_index.json
src/tftp_router_flasher/: __init__.py  main.py
tests/: conftest.py  test_tftp_router_flasher.py
