[build-system]
requires = ["setuptools>=69.4.2", "wheel>=0.44.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/tftp_router_flasher/_version.py"  # Create version file
version_scheme = "no-guess-dev"                   # Increment patch for dev
local_scheme = "no-local-version"                 # No local git state
fallback_version = "0.0.0.dev0"                   # When no tags exist
tag_regex = "^v(?P<version>.*)$"                  # PEP 440 compliant

[project]
name = "tftp-router-flasher"
description = "Firmware rescue and flashing tool for routers via TFTP"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-2.0" }
authors = [
    {name = "vr-ski", email = "166657596+vr-ski@users.noreply.github.com"}
]
dependencies = [
  "tftpy==0.8.6",
  "psutil==7.1.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Environment :: Console",
  "Topic :: System :: Networking",
  "Topic :: System :: Boot",
  "Topic :: Utilities",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
]
keywords = ["tftp", "router", "firmware", "recovery", "networking"]

[project.optional-dependencies]
dev = [
    "ruff>=0.10.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "build>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
security = [
    "safety>=3.2.12",
    "bandit>=1.7.8",
]
build = [
    "build>=1.3.0",
    "twine>=6.0.0",
    "wheel>=0.44.0",
    "tomli>=2.0.2",
    "setuptools-scm>=8.1.0"
]


[project.urls]
Homepage = "https://vr-ski.github.io/TFTPRouterFlasher/"
Source = "https://github.com/vr-ski/TFTPRouterFlasher"
Issues = "https://github.com/vr-ski/TFTPRouterFlasher/issues"
"CI/CD" = "https://github.com/vr-ski/TFTPRouterFlasher/actions"

[project.scripts]
tftp-router-flasher = "tftp_router_flasher.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    "tests/",
    "build/",
    "dist/",
    "*.egg-info/",
    "**/__pycache__/",
    "pyproject.toml",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations (type hints)
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "W",   # pycodestyle warnings
    "Q",   # flake8-quotes
    "COM", # flake8-commas
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # ignore line length errors (handled by formatter)
    "COM812", # missing-trailing-comma
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"  # Changed from 3.8 to match your mypy.ini
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true  # Added this line
exclude = [
    "build/",
    "dist/",
    ".*\\.egg-info",
]

# Ignore all errors in test files
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test.*"
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tftp_router_flasher --cov-report=xml --cov-report=html"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["tftp_router_flasher"]
omit = ["*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == \"__main__\":",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B404",  # import subprocess
    "B607",  # start_process_with_partial_path
    "B603",  # subprocess_without_shell_equals_true
]
